# powermated

./: .gitignore  00-griffin-powermate.rules  README.md  powermated  pyproject.toml
powermated/: __init__.py
test/: __init__.py  __main__.py
