[tool.poetry]
name = "powermated"
version = "0.1.0"
description = "A simple driver to use Griffin Powermate on Linux"
authors = ["Stefano Varesi"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
evdev = "^1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
powermated = "powermated:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
